@@ -5,24 +5,123 @@
  */
 
 /**
- * Build the content of the header block. Use a manually cached
- * version, if available.
+ * Get ASU brand block settings.
  */
-function asu_brand_get_block_header() {
-  // Set the header settings for the injected javascript into <head>.
-  $asu_sso_signedin = (user_is_logged_in() ? 'true' : 'false');
+function asu_brand_get_block_settings($reset = FALSE) {
+  $settings = &drupal_static(__FUNCTION__);
+  if ($reset || !isset($settings)) {
+    $settings = new StdClass;
+    $settings->header_version = variable_get('asu_brand_header_version', ASU_BRAND_HEADER_VERSION_DEFAULT);
+    $settings->header_basebath = variable_get('asu_brand_header_basepath', ASU_BRAND_HEADER_BASEPATH_DEFAULT);
+    $settings->header_template = variable_get('asu_brand_header_template', ASU_BRAND_HEADER_TEMPLATE_DEFAULT);
+    $settings->footer_color = variable_get('asu_brand_footer_color', ASU_BRAND_FOOTER_COLOR_DEFAULT);
+    $settings->head_path = $settings->header_basebath . '/' . $settings->header_version . '/heads/' . $settings->header_template . '.shtml';
+    $settings->header_path = $settings->header_basebath . '/' . $settings->header_version . '/headers/' . $settings->header_template . '.shtml';
+    $settings->footer_path = $settings->header_basebath . '/' . $settings->header_version . '/includes/footer' . $settings->footer_color . '.shtml';
+    $settings->students_footer_path = $settings->header_basebath . '/' . $settings->header_version . '/includes/students_footer.shtml';
+    
+    // Set javascript settings.
+    $js_settings = array(
+      'asu_sso_signedin' => (user_is_logged_in() ? 'true' : 'false'),
+      'asu_sso_signinurl' => '',
+      'asu_sso_signouturl' => '',
+    );
+    // Alter the signin/signout URL if cas in enabled.
+    if(module_exists('cas')) {
+      $js_settings['asu_sso_signinurl'] = url('cas', array('https' => TRUE, 'query' => cas_login_destination()));
+      $js_settings['asu_sso_signouturl'] = url('caslogout', array('https' => TRUE));
+    }
+    else {
+      $js_settings['asu_sso_signinurl'] = url('user/login', array('query' => user_login_destination()));
+      $js_settings['asu_sso_signouturl'] = url('user/logout');
+    }
+    $settings->js_settings = $js_settings;
+    
+    // Get cached data.
+    $cache_ids = asu_brand_get_cache_ids();
+    $settings->cache = cache_get_multiple($cache_ids);
+    $settings->long_term_cache = array();
+    foreach ($cache_ids as $cache_id) {
+      $settings->long_term_cache[$cache_id] = variable_get($cache_id, NULL);
+    }
+  }
   
-  // Alter the signin/signout URL if cas in enabled.
-  if(module_exists('cas')) {
-    $asu_sso_signinurl = url('cas', array('https' => TRUE, 'query' => cas_login_destination()));
-    $asu_sso_signouturl = url('caslogout', array('https' => TRUE));
+  return $settings;
+}
+
+/**
+ * Get a block's content in this order as they are available:
+ * 1. Regular Drupal cache.
+ * 2. Off-site resource file.
+ * 3. Long-cache stored in variable table (this is updated if #2 is performed).
+ *
+ * If $reset == TRUE, then skip #1.
+ */
+function asu_brand_get_cached_content($cache_id, $file_path, $reset = FALSE) {
+  if (!$reset && isset($settings->cache[$cache_id])) {
+    $output = $settings->cache[$cache_id]->data;
   }
   else {
-    $asu_sso_signinurl = url('user/login', array('query' => user_login_destination()));
-    $asu_sso_signouturl = url('user/logout');
+    if ($output = file_get_contents($file_path)) {
+      cache_set($cache_id, $output, 'cache', time() + ASU_BRAND_CACHE_LIFETIME);
+      variable_set($cache_id, $output);
+    }
+    else {
+      // File resource is not available; use long term cache and cache it for 1 hour.
+      $output = $settings->long_term_cache[$cache_id];
+      cache_set($cache_id, $output, 'cache', time() + 3600);
+      watchdog('asu_brand', 'Unable to load @path to the cache; using long term cache.', array('@path' => $file_path), WATCHDOG_ERROR);
+    }
   }
   
+  return $output;
+}
+
+/**
+ * Build the content of the header block.
+ */
+function asu_brand_get_block_header() {
+  $settings = asu_brand_get_block_settings();
+  $cache_id = 'asu_brand:header';
+  
+  // Set js settings, include js file, and inject head into <head>.
+  asu_brand_head_inject();
+  
+  return asu_brand_get_cached_content($cache_id, $settings->header_path);
+}
+
+/**
+ * Build the content of the footer block.
+ */
+function asu_brand_get_block_footer() {
+  $settings = asu_brand_get_block_settings();
+  $cache_id = 'asu_brand:footer';
+  return asu_brand_get_cached_content($cache_id, $settings->footer_path);
+}
+
+/**
+ * Build the content of the students footer block.
+ */
+function asu_brand_get_block_students_footer() {
+  $settings = asu_brand_get_block_settings();
+  $cache_id = 'asu_brand:students_footer';
+  return asu_brand_get_cached_content($cache_id, $settings->students_footer_path);
+}
+
+/**
+ * Inject the head file into <head>. The order of the injections matter due to
+ * how the includes are updating the header.
+ */
+function asu_brand_head_inject() {
+  $settings = asu_brand_get_block_settings();
+  $cache_id = 'asu_brand:head';
+  
+  $head_output =  asu_brand_get_cached_content($cache_id, $settings->head_path);
+
   // Inject header javascript into <head> and set the weight to a high negative value.
+  $asu_sso_signedin = $settings->js_settings['asu_sso_signedin'];
+  $asu_sso_signinurl = $settings->js_settings['asu_sso_signinurl'];
+  $asu_sso_signouturl = $settings->js_settings['asu_sso_signouturl'];
   $inline_script = <<<EOL
    <script type="text/javascript">
     <!--//--><![CDATA[//><!--
@@ -33,96 +132,11 @@ function asu_brand_get_block_header() {
     //--><!]]>
   </script>
 EOL;
+  
+  // TODO: If asu.edu/asuthemes/x/headers/default.shtml and asu.edu/asuthemes/x/js/asu_header.js
+  // get updated we can remove the first drupal_add_html_head() and $inline_script above.
+  drupal_add_js(array('asu_brand' => $settings->js_settings), 'setting');
+  drupal_add_js(drupal_get_path('module', 'asu_brand') . '/asu_brand.js', array());
   drupal_add_html_head(array('#type' => 'markup', '#markup' => $inline_script, '#weight' => -100), 'asu_brand_head_js');
-  
-  // Build the head and header file paths.
-  $header_version = variable_get('asu_brand_header_version', ASU_BRAND_HEADER_VERSION_DEFAULT);
-  $header_basebath = variable_get('asu_brand_header_basepath', ASU_BRAND_HEADER_BASEPATH_DEFAULT);
-  $header_template = variable_get('asu_brand_header_template', ASU_BRAND_HEADER_TEMPLATE_DEFAULT);
-  
-  $cache = array('asu_brand:head', 'asu_brand:header');
-  $cache = cache_get_multiple($cache);
-  
-  // Get the cached version of head, if available. Inject the head file into
-  // <head>. The weight of this item must occur after the injection of the
-  // header javascript.
-  if (isset($cache['asu_brand:head'])) {
-    $head_output = $cache['asu_brand:head']->data;
-  }
-  else {
-    $head_path = $header_basebath . '/' . $header_version . '/heads/' . $header_template . '.shtml';
-    if ($head_output = file_get_contents($head_path)) {
-      cache_set('asu_brand:head', $head_output, 'cache', time() + ASU_BRAND_CACHE_LIFETIME);
-    }
-    else {
-      $head_output = '';
-      watchdog('asu_brand', 'Unable to load @path to the cache.', array('@path' => $head_path), WATCHDOG_ERROR);
-    }
-  }
   drupal_add_html_head(array('#type' => 'markup', '#markup' => $head_output, '#weight' => -99), 'asu_brand_head');
-  
-  // Get the cached version of header, if available.
-  if (isset($cache['asu_brand:header'])) {
-    $output = $cache['asu_brand:header']->data;
-  }
-  else {
-    $header_path = $header_basebath . '/' . $header_version . '/headers/' . $header_template . '.shtml';
-    if ($output = file_get_contents($header_path)) {
-      cache_set('asu_brand:header', $output, 'cache', time() + ASU_BRAND_CACHE_LIFETIME);
-    }
-    else {
-      $output = '';
-      watchdog('asu_brand', 'Unable to load @path to the cache.', array('@path' => $header_path), WATCHDOG_ERROR);
-    }
-  }
-  
-  // Return the content from the ASU header.
-  return $output;
-}
-
-/**
- * Build the content of the footer block. Use a manually cached
- * version, if available.
- */
-function asu_brand_get_block_footer() {
-  if ($cache = cache_get('asu_brand:footer')) {
-    $output = $cache->data;
-  }
-  else {
-    $header_version = variable_get('asu_brand_header_version', ASU_BRAND_HEADER_VERSION_DEFAULT);
-    $header_basebath = variable_get('asu_brand_header_basepath', ASU_BRAND_HEADER_BASEPATH_DEFAULT);
-    $footer_color = variable_get('asu_brand_footer_color', ASU_BRAND_FOOTER_COLOR_DEFAULT);
-    $path = $header_basebath . '/' . $header_version . '/includes/footer' . $footer_color . '.shtml';
-    if ($output = file_get_contents($path)) {
-      cache_set('asu_brand:footer', $output, 'cache', time() + ASU_BRAND_CACHE_LIFETIME);
-    }
-    else {
-      $output = '';
-      watchdog('asu_brand', 'Unable to load @path to the cache.', array('@path' => $path), WATCHDOG_ERROR);
-    }
-  }
-  return $output;
-}
-
-/**
- * Build the content of the students footer block. Use a manually cached
- * version, if available.
- */
-function asu_brand_get_block_students_footer() {
-  if ($cache = cache_get('asu_brand:students_footer')) {
-    $output = $cache->data;
-  }
-  else {
-    $header_version = variable_get('asu_brand_header_version', ASU_BRAND_HEADER_VERSION_DEFAULT);
-    $header_basebath = variable_get('asu_brand_header_basepath', ASU_BRAND_HEADER_BASEPATH_DEFAULT);
-    $path = $header_basebath . '/' . $header_version . '/includes/students_footer.shtml';
-    if ($output = file_get_contents($path)) {
-      cache_set('asu_brand:students_footer', $output, 'cache', time() + ASU_BRAND_CACHE_LIFETIME);
-    }
-    else {
-      $output = '';
-      watchdog('asu_brand', 'Unable to load @path to the cache.', array('@path' => $path), WATCHDOG_ERROR);
-    }
-  }
-  return $output;
 }
