@@ -1,5 +1,14 @@
 CHANGELOG for ASU Brand module for Drupal 7
 
+7.x-1.5, 2014-01-15
+-----------------------
+- Add the use of long term caches in the case that the external file resources
+  are unavailable, including header version XML file.
+- Added the ability to block certain paths from getting block's full content and
+  just providing a 'Preview not available' message. This helps with panel pane
+  previews throwing ajax errors. Provides default paths with option to add/delete
+  paths through the UI.
+
 7.x-1.4, 2013-03-27
 -----------------------
 - Added support for selecting header version from http://asu.edu/asuthemes/headers.xml.
